test_suite/tests/compile_fail/rename_special_chars.stderr
error: A rename can only contain a-z, A-Z and 0-9 or _
 --> tests/compile_fail/rename_special_chars.rs:5:21
  |
5 |     #[arri(rename = "what-if-we-did-*-and-got-paid-$-for-it?")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
